welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:11: error: not found: value v
        t(i)=v
             ^golomb:17: error: not found: value i
        t(i)=v
          ^golomb:17: error: not found: value v
        t(i)=v
             ^golomb:7: error: type mismatch;
 found   : Unit
 required: Int
  while(compteur < num){
  ^